Update de.json (POEditor.com)

--- a/PaperZee/lang/de.json
+++ b/PaperZee/lang/de.json
@@ -29,14 +29,14 @@
         "help": "Hilfe",
         "users": "Nutzer",
         "calendar": "Kalender",
-        "bouncers": "",
-        "notifications": "",
+        "bouncers": "Bouncers",
+        "notifications": "Benachrichtigungen",
         "contact": {
-            "facebook": "",
-            "email": ""
+            "facebook": "Du kannst uns über Facebook kontaktieren",
+            "email": "oder schreib uns eine E-Mail an support@cuppazee.app"
         },
-        "clans": "",
-        "logging_in": ""
+        "clans": "Clans",
+        "logging_in": "Einloggen..."
     },
     "activity": {
         "user_captured": "{user} erfasste",
@@ -67,15 +67,15 @@
         },
         "none": "keine",
         "user_today": "{user} heute",
-        "user_renovated": "",
-        "you_renovated": "",
+        "user_renovated": "{user} erneuerte dein Motel",
+        "you_renovated": "Du erneuertest ein Motel",
         "renovation": {
-            "one": "",
-            "other": ""
+            "one": "{count} Erneuerung",
+            "other": "{count} Erneuerungen"
         },
         "renovon": {
-            "one": "",
-            "other": ""
+            "one": "{count} Erneuerung",
+            "other": "{count} Erneuerungen"
         }
     },
     "user": {
@@ -88,22 +88,22 @@
         "special_hunter_challenge": "Spezielle Jäger Herausforderung",
         "captured_types": "Erfasste Typen",
         "activity": "Aktivität",
-        "clan_stats": "",
-        "clan_progress_desc": "",
-        "clan_info": "",
-        "clan_info_desc": "",
-        "challenges": "",
-        "sh_lite": "",
-        "sh_pro": "",
-        "your_clan": "",
-        "no_clan": "",
-        "no_clan_desc": ""
+        "clan_stats": "Clan Statistiken",
+        "clan_progress_desc": "Zeig an, welches Level du erreichen kannst!",
+        "clan_info": "Clan War Info FB Gruppe",
+        "clan_info_desc": "Ein guter Ort, um einen Clan zu finden oder Fragen zu stellen!",
+        "challenges": "Herausforderungen",
+        "sh_lite": "Special Hunter Leicht",
+        "sh_pro": "Special Hunter Profi",
+        "your_clan": "Dein Clan",
+        "no_clan": "Du bist in keinem Clan",
+        "no_clan_desc": "Sieh deinen Fortschritt unten"
     },
     "inventory": {
         "undeployed": "Nicht verteilt",
         "credits": "Credits",
         "history": "Verlauf",
-        "unknown_name": ""
+        "unknown_name": "unbekannter Name"
     },
     "app_info": {
         "credits": "Credits",
@@ -112,21 +112,21 @@
         "database_contributors": "Mitwirkende an der Datenbank",
         "patrons_and_supporters": "Spender und Unterstützer",
         "build_n": "Version {build}",
-        "patreon_donate": "",
-        "paypal_donate": "",
-        "paypal_donate_desc": "",
+        "patreon_donate": "Monatlich über Patreon",
+        "paypal_donate": "Einmalig über PayPal",
+        "paypal_donate_desc": "PayPal Spenden können über donate@cuppazee.app geschickt werden",
         "custom_titles": {
-            "primary_dev": "",
-            "finnish": "",
-            "dutch": "",
-            "german": "",
-            "hungarian": "",
-            "swedish": "",
-            "french": "",
-            "czech": "",
-            "danish": "",
-            "portugese": "",
-            "lithuanian": ""
+            "primary_dev": "Hauptentwickler",
+            "finnish": "Finnisch",
+            "dutch": "Niederländisch",
+            "german": "Deutsch",
+            "hungarian": "Ungarisch",
+            "swedish": "Schwedisch",
+            "french": "Französisch",
+            "czech": "Tschechisch",
+            "danish": "Dänisch",
+            "portugese": "Portugiesisch",
+            "lithuanian": "Litauisch"
         }
     },
     "your_bouncers": {
@@ -136,170 +136,170 @@
         },
         "last_captured": "zuletzt erfasst: {time}",
         "in_limbo": "Eine Pause machen",
-        "host": ""
+        "host": "Auf {munzee} von {username}"
     },
     "calendar": {
         "days": {
-            "monday": "",
-            "tuesday": "",
-            "wednesday": "",
-            "thursday": "",
-            "friday": "",
-            "saturday": "",
-            "sunday": ""
+            "monday": "Mo",
+            "tuesday": "Di",
+            "wednesday": "Mi",
+            "thursday": "Do",
+            "friday": "Fr",
+            "saturday": "Sa",
+            "sunday": "So"
         },
-        "off": ""
+        "off": "weg"
     },
     "clan": {
-        "requirements": "",
-        "rewards": "",
-        "individual": "",
-        "group": "",
-        "level_n": "",
-        "shadow": "",
-        "goal": "",
+        "requirements": "Anforderungen",
+        "rewards": "Belohnungen",
+        "individual": "Individuelle",
+        "group": "Gruppe",
+        "level_n": "Level {level}",
+        "shadow": "Geheimer Clan",
+        "goal": "Ziel",
         "view": {
-            "subtract": "",
-            "total": ""
+            "subtract": "Kurzansicht",
+            "total": "Gesamte Ansicht"
         },
-        "share": "",
-        "indiv": "",
-        "group_total": "",
+        "share": "Teilen",
+        "indiv": "Indiv",
+        "group_total": "Gruppe gesamt",
         "level": {
-            "one": "",
-            "other": ""
+            "one": "Level",
+            "other": "Level"
         }
     },
     "search": {
-        "clan": "",
-        "type": "",
-        "empty": "",
-        "user": ""
+        "clan": "Suche einen Clan",
+        "type": "Suche einen Munzeetypen",
+        "empty": "Keine Ergebnisse :-(",
+        "user": "Suche einen Nutzer"
     },
     "db": {
-        "go_back": "",
-        "types_search": "",
-        "category": "",
+        "go_back": "Geh zurück",
+        "types_search": "Typensuche",
+        "category": "Kategorie",
         "type": {
-            "info": "",
-            "evo": "",
-            "pouch": "",
-            "can_host": "",
-            "lands_on": ""
+            "info": "Symbol: {icon} - ID: {id}",
+            "evo": "Evolution Stufen",
+            "pouch": "Pouch Kreaturen Stufen",
+            "can_host": "Kann darauf landen",
+            "lands_on": "Landet auf"
         }
     },
     "auth": {
-        "add": "",
-        "welcome": "",
-        "tap": ""
+        "add": "Füge einen neuen Nutzer hinzu",
+        "welcome": "Willkommen bei CuppaZee",
+        "tap": "Klicke unten, um dich einzuloggen"
     },
     "shc": {
         "lite": {
-            "tob": "",
-            "nomad": "",
-            "myth_1": "",
-            "myth_2": "",
-            "pc_1": "",
-            "pc_2": "",
-            "flat": "",
-            "temp": "",
-            "scatter": ""
+            "tob": "AlternaMyth oder Escaped Pouch Kreatur",
+            "nomad": "Nomade oder RetiredMyth",
+            "myth_1": "Originaler oder Klassischer Myth",
+            "myth_2": "Mirror oder Moderner Myth",
+            "pc_1": "Pouch Kreatur S1",
+            "pc_2": "Pouch Kreatur S2",
+            "flat": "Fancy Flat",
+            "temp": "Evo Bouncer / tPOB",
+            "scatter": "Scatter"
         },
         "pro": {
-            "tob": "",
-            "nomad": "",
-            "retire": "",
-            "myth_1": "",
-            "myth_2": "",
-            "myth_3": "",
-            "myth_4": "",
-            "pc_1": "",
-            "pc_2": "",
-            "pc_fun": "",
-            "flat": "",
-            "temp": "",
-            "pscatter": "",
-            "vscatter": ""
+            "tob": "AlternaMyth oder Escaped Pouch Kreatur",
+            "nomad": "Nomade",
+            "retire": "RetiredMyth",
+            "myth_1": "Originaler Myth",
+            "myth_2": "Klassischer Myth",
+            "myth_3": "Mirror Myth",
+            "myth_4": "Moderner Myth",
+            "pc_1": "Pouch Kreatur S1",
+            "pc_2": "Pouch Kreatur S2",
+            "pc_fun": "Funfinity Stone",
+            "flat": "Fancy Flat",
+            "temp": "Evo Bouncer / tPOB",
+            "pscatter": "Physischer Scatter",
+            "vscatter": "Virtueller Scatter"
         }
     },
     "notifications": {
-        "munzee_blog": "",
-        "save": "",
-        "unavailable_web": "",
-        "unavailable_generic": ""
+        "munzee_blog": "Munzee Blog",
+        "save": "speichern",
+        "unavailable_web": "Benachrichtigungen sind nicht verfügbar übers Web",
+        "unavailable_generic": "Benachrichtigungen sind nicht verfügbar. Akzeptierst du die Erlaubnis?"
     },
     "settings": {
-        "add_user": "",
-        "update": "",
-        "theme": "",
-        "language": "",
-        "logout": "",
-        "save": ""
+        "add_user": "Nutzer hinzufügen",
+        "update": "Update",
+        "theme": "Thema: {name}",
+        "language": "Sprache: {name}",
+        "logout": "Ausloggen",
+        "save": "Einstellungen speichern"
     },
     "bouncers": {
-        "duration": ""
+        "duration": "Dauer: {duration}"
     },
     "scanner": {
-        "scan_new": "",
-        "munzee": "",
-        "type": ""
+        "scan_new": "neuen Munzee scannen",
+        "munzee": "{name} von {username}",
+        "type": "Typ: {type}"
     },
     "quest": {
-        "task_1": "",
-        "task_2": "",
-        "task_3": "",
-        "task_4": "",
-        "task_5": "",
-        "task_6": "",
-        "task_7": "",
-        "task_8": ""
+        "task_1": "Mystery Caps/Deps",
+        "task_2": "Evolution Caps/Deps",
+        "task_3": "Clanwaffen Caps/Deps",
+        "task_4": "Juwelen Caps/Deps",
+        "task_5": "Erfasse /m/XeresDan/1707",
+        "task_6": "Flat Friend Deps",
+        "task_7": "Destination Caps/Deps",
+        "task_8": "Bouncer Caps"
     },
     "themes": {
-        "black": "",
-        "blue": "",
-        "bluegrey": "",
-        "darkblue": "",
-        "green": "",
-        "grey": "",
-        "purple": "",
-        "white": ""
+        "black": "schwarz",
+        "blue": "blau",
+        "bluegrey": "blau-grau",
+        "darkblue": "dunkelblau",
+        "green": "grün",
+        "grey": "grau",
+        "purple": "lila",
+        "white": "weiß"
     },
     "screens": {
-        "_redirect": "",
-        "Map": "",
-        "Tools": "",
-        "Settings": "",
-        "Notifications": "",
-        "Info": "",
-        "Scanner": "",
-        "Calendar": "",
-        "Bouncers": "",
-        "BouncerMap": "",
-        "MunzeeDetails": "",
-        "MunzeeDetailsID": "",
-        "AllClans": "",
-        "ClanRequirements": "",
-        "ClanSearch": "",
-        "Clan": "",
-        "UserSearch": "",
-        "UserDetails": "",
-        "UserActivity": "",
-        "UserInventory": "",
-        "UserClan": "",
-        "UserQuest": "",
-        "UserCapturesCategory": "",
-        "UserSHCPro": "",
-        "UserSHCLite": "",
-        "UserSHC": "",
-        "UserBouncers": "",
-        "DBType": "",
-        "DBSearch": "",
-        "DBCategory": "",
-        "Auth": ""
+        "_redirect": "_redirect",
+        "Map": "Karte",
+        "Tools": "Werkzeuge",
+        "Settings": "Einstellungen",
+        "Notifications": "Benachrichtigungen",
+        "Info": "Info",
+        "Scanner": "Scanner",
+        "Calendar": "Kalender",
+        "Bouncers": "Bouncers",
+        "BouncerMap": "Bouncer Karte",
+        "MunzeeDetails": "Munzee Details",
+        "MunzeeDetailsID": "Munzee Details",
+        "AllClans": "Alle Clans",
+        "ClanRequirements": "Clan Anforderungen",
+        "ClanSearch": "Clan Suche",
+        "Clan": "Clan Statistiken",
+        "UserSearch": "Nutzer Suche",
+        "UserDetails": "Nutzer Details",
+        "UserActivity": "Aktivität",
+        "UserInventory": "Inventar",
+        "UserClan": "Clan Fortschritt",
+        "UserQuest": "Aufgaben Fortschritt",
+        "UserCapturesCategory": "Captures Kategorie",
+        "UserSHCPro": "SHC Profi",
+        "UserSHCLite": "SHC Leicht",
+        "UserSHC": "SHC Klassisch",
+        "UserBouncers": "Nutzer Bouncer",
+        "DBType": "Typen Datenbank",
+        "DBSearch": "Datenbanksuche",
+        "DBCategory": "Kategorie Datenbank",
+        "Auth": "Authentifizieren"
     },
     "changelog": {
-        "build_n": "",
-        "continue": "",
-        "no_changelog": ""
+        "build_n": "Version {n}",
+        "continue": "Weiter zu CuppaZee",
+        "no_changelog": "Kein Änderungsprotokoll"
     }
 }
