--- a/PaperZee/lang/da.json
+++ b/PaperZee/lang/da.json
@@ -88,13 +88,13 @@
         "special_hunter_challenge": "Special-jæger udfordringen",
         "captured_types": "Skannede typer",
         "activity": "Aktivitet",
-        "clan_stats": "",
-        "clan_progress_desc": "",
-        "clan_info": "",
-        "clan_info_desc": "",
-        "challenges": "",
-        "sh_lite": "",
-        "sh_pro": "",
+        "clan_stats": "Klanstatistik",
+        "clan_progress_desc": "Se hvilket niveau du kan nå!",
+        "clan_info": "Klankrig-info FB-gruppe",
+        "clan_info_desc": "Et godt sted at finde en klan eller stille spørgsmål!",
+        "challenges": "Udfordringer",
+        "sh_lite": "Special-jæger lite",
+        "sh_pro": "Special-jæger pro",
         "your_clan": "",
         "no_clan": "",
         "no_clan_desc": ""
@@ -103,7 +103,7 @@
         "undeployed": "Ikke-placerede",
         "credits": "Kreditter",
         "history": "Historik",
-        "unknown_name": ""
+        "unknown_name": "Ukendt navn"
     },
     "app_info": {
         "credits": "Anerkendelser",
@@ -112,21 +112,21 @@
         "database_contributors": "Database-bidragsydere",
         "patrons_and_supporters": "Patrons og supportere",
         "build_n": "Build {build}",
-        "patreon_donate": "",
-        "paypal_donate": "",
-        "paypal_donate_desc": "",
+        "patreon_donate": "Månedligt via Patreon",
+        "paypal_donate": "En gang via PayPal",
+        "paypal_donate_desc": "PayPal-donationer kan sendes til donate@cuppazee.app",
         "custom_titles": {
-            "primary_dev": "",
-            "finnish": "",
-            "dutch": "",
-            "german": "",
-            "hungarian": "",
-            "swedish": "",
-            "french": "",
-            "czech": "",
-            "danish": "",
-            "portugese": "",
-            "lithuanian": ""
+            "primary_dev": "Primær udvikler",
+            "finnish": "Finsk",
+            "dutch": "Hollandsk",
+            "german": "Tysk",
+            "hungarian": "Ungarsk",
+            "swedish": "Svensk",
+            "french": "Fransk",
+            "czech": "Tjekkisk",
+            "danish": "Dansk",
+            "portugese": "Portogisisk",
+            "lithuanian": "Litauisk"
         }
     },
     "your_bouncers": {
@@ -210,12 +210,12 @@
             "nomad": "Nomade",
             "retire": "RetireMyth",
             "myth_1": "Original mytologisk",
-            "myth_2": "",
-            "myth_3": "",
-            "myth_4": "",
-            "pc_1": "",
-            "pc_2": "",
-            "pc_fun": "",
+            "myth_2": "Klassisk mytologisk",
+            "myth_3": "Spejl-mytologisk",
+            "myth_4": "Moderne mytologisk",
+            "pc_1": "Posevæsen S1",
+            "pc_2": "Posevæsen S2",
+            "pc_fun": "Funfinity-sten",
             "flat": "",
             "temp": "",
             "pscatter": "",
@@ -223,33 +223,33 @@
         }
     },
     "notifications": {
-        "munzee_blog": "",
-        "save": "",
-        "unavailable_web": "",
-        "unavailable_generic": ""
+        "munzee_blog": "Munzee Blog",
+        "save": "Gem",
+        "unavailable_web": "Notifikationer er ikke tilgængelige på web",
+        "unavailable_generic": "Notifikationer er ikke tilgængelige. Har du givet tilladelse?"
     },
     "settings": {
-        "add_user": "",
-        "update": "",
-        "theme": "",
-        "language": "",
+        "add_user": "Tilføj bruger",
+        "update": "Gennemtving opdatering",
+        "theme": "Tema: {name}",
+        "language": "Sprog: {name}",
         "logout": "",
         "save": ""
     },
     "bouncers": {
-        "duration": ""
+        "duration": "Varighed: {duration}"
     },
     "scanner": {
-        "scan_new": "",
-        "munzee": "",
-        "type": ""
+        "scan_new": "Skan ny munzee",
+        "munzee": "{name} af {username}",
+        "type": "Type: {type}"
     },
     "quest": {
         "task_1": "",
         "task_2": "",
-        "task_3": "",
-        "task_4": "",
-        "task_5": "",
+        "task_3": "Våben-skanninger/-placeringer",
+        "task_4": "Juvel-skanninger/-placeringer",
+        "task_5": "Skan /m/XeresDan/1707",
         "task_6": "",
         "task_7": "",
         "task_8": ""
