--- a/PaperZee/lang/en-us.json
+++ b/PaperZee/lang/en-us.json
@@ -233,8 +233,8 @@
         "update": "Force Update",
         "theme": "Theme: {name}",
         "language": "Language: {name}",
-        "logout": "",
-        "save": ""
+        "logout": "Logout",
+        "save": "Save Settings"
     },
     "bouncers": {
         "duration": "Duration: {duration}"
