--- a/PaperZee/utils/lang/nl.json
+++ b/PaperZee/utils/lang/nl.json
@@ -29,14 +29,14 @@
         "help": "Help",
         "users": "Spelers",
         "calendar": "Kalender",
-        "bouncers": "",
-        "notifications": "",
+        "bouncers": "Bouncers",
+        "notifications": "Notificaties",
         "contact": {
-            "facebook": "",
-            "email": ""
+            "facebook": "Je kunt ons bereiken via Facebook",
+            "email": "of mail ons via support@cuppazee.app"
         },
-        "clans": "",
-        "logging_in": ""
+        "clans": "Clans",
+        "logging_in": "Inloggen..."
     },
     "activity": {
         "user_captured": "{user} captured",
@@ -67,15 +67,15 @@
         },
         "none": "Geen",
         "user_today": "{user} Vandaag",
-        "user_renovated": "",
-        "you_renovated": "",
+        "user_renovated": "{User} renoveerde jouw Motel",
+        "you_renovated": "Je hebt een Motel gerenoveerd",
         "renovation": {
-            "one": "",
-            "other": ""
+            "one": "{count} Renovatie",
+            "other": "{count} Renovaties"
         },
         "renovon": {
-            "one": "",
-            "other": ""
+            "one": "{count} Renov-on",
+            "other": "{count} Renov-ons"
         }
     },
     "user": {
@@ -88,22 +88,22 @@
         "special_hunter_challenge": "Special Hunter uitdaging",
         "captured_types": "Captured soorten",
         "activity": "Activiteit",
-        "clan_stats": "",
-        "clan_progress_desc": "",
-        "clan_info": "",
-        "clan_info_desc": "",
-        "challenges": "",
-        "sh_lite": "",
-        "sh_pro": "",
-        "your_clan": "",
-        "no_clan": "",
-        "no_clan_desc": ""
+        "clan_stats": "Clan Stats",
+        "clan_progress_desc": "Bekijk welk niveau je kunt behalen!",
+        "clan_info": "Clan War Info FB Groep",
+        "clan_info_desc": "A goede plek om een clan te vinden of om vragen te stellen!",
+        "challenges": "Uitdagingen",
+        "sh_lite": "Special Hunter Lite",
+        "sh_pro": "Special Hunter Pro",
+        "your_clan": "Jouw Clan",
+        "no_clan": "Je zit niet in een Clan",
+        "no_clan_desc": "Bekijk jouw voortgang hier beneden"
     },
     "inventory": {
         "undeployed": "Niet gedeployed",
         "credits": "Kredieten",
         "history": "Geschiedenis",
-        "unknown_name": ""
+        "unknown_name": "Onbekende naam"
     },
     "app_info": {
         "credits": "Kredieten",
@@ -112,21 +112,21 @@
         "database_contributors": "Database-bijdragers",
         "patrons_and_supporters": "Patrons and supporters",
         "build_n": "Versie {build}",
-        "patreon_donate": "",
-        "paypal_donate": "",
-        "paypal_donate_desc": "",
+        "patreon_donate": "Maandelijks via Patreon",
+        "paypal_donate": "Eenmalig via PayPal",
+        "paypal_donate_desc": "PayPal donaties kunnen naar donate@cuppazee.app worden verzonden",
         "custom_titles": {
-            "primary_dev": "",
-            "finnish": "",
-            "dutch": "",
-            "german": "",
-            "hungarian": "",
-            "swedish": "",
-            "french": "",
-            "czech": "",
-            "danish": "",
-            "portugese": "",
-            "lithuanian": ""
+            "primary_dev": "Primaire Ontwikkelaar ",
+            "finnish": "Fins",
+            "dutch": "Nederlands",
+            "german": "Duits",
+            "hungarian": "Hongaars",
+            "swedish": "Zweeds",
+            "french": "Frans",
+            "czech": "Tsjech",
+            "danish": "Deens",
+            "portugese": "Portugees",
+            "lithuanian": "Lithuanian"
         }
     },
     "your_bouncers": {
@@ -136,170 +136,170 @@
         },
         "last_captured": "Laatst Captured: {time}",
         "in_limbo": "Doet een dutje",
-        "host": ""
+        "host": "Op {munzee} van {username}"
     },
     "calendar": {
         "days": {
-            "monday": "",
-            "tuesday": "",
-            "wednesday": "",
-            "thursday": "",
-            "friday": "",
-            "saturday": "",
-            "sunday": ""
+            "monday": "M",
+            "tuesday": "D",
+            "wednesday": "W",
+            "thursday": "D",
+            "friday": "V",
+            "saturday": "Z",
+            "sunday": "Z"
         },
-        "off": ""
+        "off": "Uit"
     },
     "clan": {
-        "requirements": "",
-        "rewards": "",
-        "individual": "",
-        "group": "",
-        "level_n": "",
-        "shadow": "",
-        "goal": "",
+        "requirements": "Vereisten",
+        "rewards": "Beloningen",
+        "individual": "Individueel",
+        "group": "Groep",
+        "level_n": "Niveau {level}",
+        "shadow": "Schaduw Clan",
+        "goal": "Doel",
         "view": {
-            "subtract": "",
-            "total": ""
+            "subtract": "Subtract Overzicht",
+            "total": "Totaal Overzicht"
         },
-        "share": "",
-        "indiv": "",
-        "group_total": "",
+        "share": "Delen",
+        "indiv": "Indiv",
+        "group_total": "Groep Totaal",
         "level": {
-            "one": "",
-            "other": ""
+            "one": "Niveau",
+            "other": "Niveaus"
         }
     },
     "search": {
-        "clan": "",
-        "type": "",
-        "empty": "",
-        "user": ""
+        "clan": "Zoek een Clan",
+        "type": "Zoek een Munzee Type",
+        "empty": "Geen resultaat :(",
+        "user": "Zoek een gebruiker"
     },
     "db": {
-        "go_back": "",
-        "types_search": "",
-        "category": "",
+        "go_back": "Ga terug",
+        "types_search": "Types Zoeken",
+        "category": "Categorie",
         "type": {
-            "info": "",
-            "evo": "",
-            "pouch": "",
-            "can_host": "",
-            "lands_on": ""
+            "info": "Icoon: {icon} - ID: {id}",
+            "evo": "Stadia Evoluties",
+            "pouch": "Stadia Pouch Creature",
+            "can_host": "Is Host voor",
+            "lands_on": "Kan landen op"
         }
     },
     "auth": {
-        "add": "",
-        "welcome": "",
-        "tap": ""
+        "add": "Toevoegen nieuwe gebruiker",
+        "welcome": "Welkom bij CuppaZee",
+        "tap": "Tik hieronder om in te loggen"
     },
     "shc": {
         "lite": {
-            "tob": "",
-            "nomad": "",
-            "myth_1": "",
-            "myth_2": "",
-            "pc_1": "",
-            "pc_2": "",
-            "flat": "",
-            "temp": "",
-            "scatter": ""
+            "tob": "AlternaMyth of Ontsnapte PC",
+            "nomad": "Nomad of RetireMyth",
+            "myth_1": "Origineel of klassieke Myth",
+            "myth_2": "Spiegel van Moderne Myth",
+            "pc_1": "Pouch Creature S1",
+            "pc_2": "Pouch Creature S2",
+            "flat": "Fancy Flat",
+            "temp": "Evo Bouncer /tPOB",
+            "scatter": "Scatter"
         },
         "pro": {
-            "tob": "",
-            "nomad": "",
-            "retire": "",
-            "myth_1": "",
-            "myth_2": "",
-            "myth_3": "",
-            "myth_4": "",
-            "pc_1": "",
-            "pc_2": "",
-            "pc_fun": "",
-            "flat": "",
-            "temp": "",
-            "pscatter": "",
-            "vscatter": ""
+            "tob": "AlterMyth or Ontsnapte PC\n",
+            "nomad": "Nomad",
+            "retire": "RetireMyth",
+            "myth_1": "Originele Myth",
+            "myth_2": "Klassieke Myth",
+            "myth_3": "Spiegel Myth",
+            "myth_4": "Moderne Myth",
+            "pc_1": "Pouch Creature S1",
+            "pc_2": "Pouch Creature S2",
+            "pc_fun": "Funfinity Stone",
+            "flat": "Fancy Flat",
+            "temp": "Evo Bouncer / tPOB",
+            "pscatter": "Fysieke Scatter",
+            "vscatter": "Virtuele Scatter"
         }
     },
     "notifications": {
-        "munzee_blog": "",
-        "save": "",
-        "unavailable_web": "",
-        "unavailable_generic": ""
+        "munzee_blog": "Munzee Blog",
+        "save": "Opslaan",
+        "unavailable_web": "Notificaties zijn niet beschikbaar op het Web",
+        "unavailable_generic": "Notificaties zijn niet beschikbaar. Heb je de toestemmingen geaccepteerd?"
     },
     "settings": {
-        "add_user": "",
-        "update": "",
-        "theme": "",
-        "language": "",
-        "logout": "",
-        "save": ""
+        "add_user": "Gebruiker Toevoegen ",
+        "update": "Update forceren",
+        "theme": "Thema: {name}",
+        "language": "Taal: {name}",
+        "logout": "Uitloggen",
+        "save": "Instellingen opslaan"
     },
     "bouncers": {
-        "duration": ""
+        "duration": "Tijdsduur: {duration}"
     },
     "scanner": {
-        "scan_new": "",
-        "munzee": "",
-        "type": ""
+        "scan_new": "Scan nieuwe Munzee",
+        "munzee": "{name} door {username}",
+        "type": "Type: {type}"
     },
     "quest": {
-        "task_1": "",
-        "task_2": "",
-        "task_3": "",
-        "task_4": "",
-        "task_5": "",
-        "task_6": "",
-        "task_7": "",
-        "task_8": ""
+        "task_1": "Mystery Caps/Deps",
+        "task_2": "Evo Caps/Deps",
+        "task_3": "Weapon Caps/Deps",
+        "task_4": "Jewel Caps/Deps",
+        "task_5": "Capture /m/XeresDan/1707",
+        "task_6": "Flat Friends Deps",
+        "task_7": "Destination Caps/Deps",
+        "task_8": "Bouncer Caps"
     },
     "themes": {
-        "black": "",
-        "blue": "",
-        "bluegrey": "",
-        "darkblue": "",
-        "green": "",
-        "grey": "",
-        "purple": "",
-        "white": ""
+        "black": "Zwart",
+        "blue": "Blauw",
+        "bluegrey": "Blauw Grijs",
+        "darkblue": "Donker Blauw",
+        "green": "Groen",
+        "grey": "Grijs",
+        "purple": "Paars",
+        "white": "Wit"
     },
     "screens": {
-        "_redirect": "",
-        "Map": "",
-        "Tools": "",
-        "Settings": "",
-        "Notifications": "",
-        "Info": "",
-        "Scanner": "",
-        "Calendar": "",
-        "Bouncers": "",
-        "BouncerMap": "",
-        "MunzeeDetails": "",
-        "MunzeeDetailsID": "",
-        "AllClans": "",
-        "ClanRequirements": "",
-        "ClanSearch": "",
-        "Clan": "",
-        "UserSearch": "",
-        "UserDetails": "",
-        "UserActivity": "",
-        "UserInventory": "",
-        "UserClan": "",
-        "UserQuest": "",
-        "UserCapturesCategory": "",
-        "UserSHCPro": "",
-        "UserSHCLite": "",
-        "UserSHC": "",
-        "UserBouncers": "",
-        "DBType": "",
-        "DBSearch": "",
-        "DBCategory": "",
-        "Auth": ""
+        "_redirect": "_redirect",
+        "Map": "Kaart",
+        "Tools": "Tools",
+        "Settings": "Instellingen",
+        "Notifications": "Notificaties",
+        "Info": "Info",
+        "Scanner": "Scanner",
+        "Calendar": "Kalender",
+        "Bouncers": "Bouncers",
+        "BouncerMap": "Bouncer Kaart",
+        "MunzeeDetails": "Munzee Details",
+        "MunzeeDetailsID": "Munzee Details",
+        "AllClans": "Alle Clans",
+        "ClanRequirements": "Clan Vereisten",
+        "ClanSearch": "Clan Zoeken",
+        "Clan": "Clan Statistiek",
+        "UserSearch": "Gebruiker Zoeken",
+        "UserDetails": "Details Gebruiker",
+        "UserActivity": "Activiteit",
+        "UserInventory": "Inventaris",
+        "UserClan": "Clan Voortgang",
+        "UserQuest": "Quest Voortgang",
+        "UserCapturesCategory": "Captures Categorieën",
+        "UserSHCPro": "SHC Pro",
+        "UserSHCLite": "SHC Lite",
+        "UserSHC": "SHC Classic",
+        "UserBouncers": "Bouncers Gebruiker",
+        "DBType": "Database Types",
+        "DBSearch": "Database Zoeken",
+        "DBCategory": "Database Categorie",
+        "Auth": "Autoriseren"
     },
     "changelog": {
-        "build_n": "",
-        "continue": "",
-        "no_changelog": ""
+        "build_n": "Versie {n}",
+        "continue": "Verdergaan naar CuppaZee",
+        "no_changelog": "Geen Changelog"
     }
 }
