--- a/PaperZee/utils/lang/en-us.json
+++ b/PaperZee/utils/lang/en-us.json
@@ -148,7 +148,7 @@
             "saturday": "S",
             "sunday": "S"
         },
-        "off": "off"
+        "off": "Off"
     },
     "clan": {
         "requirements": "Requirements",
