Update de.json (POEditor.com)

--- a/PaperZee/utils/lang/de.json
+++ b/PaperZee/utils/lang/de.json
@@ -54,8 +54,8 @@
             "other": "{count} Captures"
         },
         "deploy": {
-            "one": "Deploy",
-            "other": "Deploys"
+            "one": "{count} Deploy",
+            "other": "{count} Deploys"
         },
         "capon": {
             "one": "{count} CapOn",
